# fiscatal

./: .clang-format  .editorconfig  .gitignore  .gitmodules  Makefile  README.md  meson.build
.cache/clangd/index/: main.c.6F0A50039847C210.idx
assets/: README.md
src/: main.c
